Lab-MovieInventory/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/237885/Desktop/4202 CS Programs 2017-18/BlueJ 4.1.0/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/237885/Desktop/4202 CS Programs 2017-18/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/237885/Desktop/4202 CS Programs 2017-18/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Users/237885/Desktop/4202 CS Programs 2017-18/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Users/237885/Desktop/4202 CS Programs 2017-18/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Users/237885/Desktop/4202 CS Programs 2017-18/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/237885/Desktop/4202 CS Programs 2017-18/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/237885/Desktop/4202 CS Programs 2017-18/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/237885/Desktop/4202 CS Programs 2017-18/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/237885/Lab-MovieInventory
-d
/Users/237885/Lab-MovieInventory/doc
-encoding
UTF-8
-charset
UTF-8
/Users/237885/Lab-MovieInventory/Checkerboard.java
<---- end of javadoc command ---->
Loading source file /Users/237885/Lab-MovieInventory/Checkerboard.java...
Constructing Javadoc information...
/Users/237885/Lab-MovieInventory/Checkerboard.java:1: error: package java.StdDraw does not exist
import java.StdDraw.*;
^
Standard Doclet version 1.8.0_131
Building tree for all the packages and classes...
Generating /Users/237885/Lab-MovieInventory/doc/Checkerboard.html...
Generating /Users/237885/Lab-MovieInventory/doc/package-frame.html...
Generating /Users/237885/Lab-MovieInventory/doc/package-summary.html...
Generating /Users/237885/Lab-MovieInventory/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /Users/237885/Lab-MovieInventory/doc/allclasses-frame.html...
Generating /Users/237885/Lab-MovieInventory/doc/allclasses-noframe.html...
Generating /Users/237885/Lab-MovieInventory/doc/index.html...
1 warning
